tests/cases/fail/match_non_enum_scrutinee.p4
def main() -> None:
    value = 1

    match value:
        case _:
            print("nope")
